# rust-p2p-chat

./: .gitignore  Cargo.toml  DETAILED_DOCUMENTATION.md  README.md  shell.nix
chat_gui/: Cargo.toml
chat_gui/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
gui/: Cargo.toml
gui/src/: lib.rs
messaging/: Cargo.toml
messaging/src/: lib.rs
network/: Cargo.toml
network/src/: lib.rs
p2p-chat/: Cargo.toml  build.rs
p2p-chat/slint/: app-window.slint
p2p-chat/src/: gui.rs  main.rs
p2p-chat/src/app/: app.rs  app_state.rs  mod.rs  networking.rs  room_handlers.rs  save.rs  types.rs  ui_handlers.rs
p2p-chat/src/gui/: app.rs  handler.rs
p2p-vpn/: Cargo.toml
p2p-vpn/src/: main.rs
saved_chats/: chat_session_1758738697_20250924_183137.json  chat_session_1758738698_20250924_183138.json  chat_session_1758738834_20250924_183354.json  chat_session_1758738861_20250924_183421.json
server/: Cargo.toml
server/src/: main.rs
ticket/: Cargo.toml
ticket/src/: lib.rs
ui/: Cargo.toml
ui/src/: lib.rs
