[workspace]
members = [
    "messaging",
    "p2p-chat",
    "ticket",
]
resolver = "3"

[workspace.dependencies]
iroh = "0.90.0"
iroh-gossip = "0.90.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
futures-lite = "2.6.0"
anyhow = "1.0.98"
serde_json = "1.0.141"
rand = "0.9.2"
clap = { version = "4.5.41", features = ["derive"]}
data-encoding = "2.9.0"
messaging = { path = "messaging" }
ticket = { path = "ticket" }
