[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
iroh-gossip = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }