[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
slint.workspace = true
iroh = { workspace = true }
iroh-gossip = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
futures-lite = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
data-encoding = { workspace = true }
messaging = { workspace = true }
ticket = { workspace = true }

[build-dependencies]
slint-build.workspace = true
