[package]
name = "p2p-vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { workspace = true }
iroh-gossip = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
futures-lite = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
messaging = { workspace = true }
ticket = { workspace = true }
gui = { workspace = true }
