[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
iroh = { workspace = true }
iroh-gossip = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
futures-lite = { workspace = true }
messaging = { path = "../messaging" }
ticket = { path = "../ticket" }
serde_json = { workspace = true }
